fix: adjust scrollbar styles and correct player height

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,6 +2,8 @@
 
 * {
   box-sizing: border-box;
+  scrollbar-width: 16px;
+  scrollbar-color: var(--outline-color) transparent;
 }
 
 html {
