--- a/src/scss/_player.scss
+++ b/src/scss/_player.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100dvh;
+  height: 100%;
 }
 
 .player__background {
